fixed circle overflow

--- a/subodh/Task 02/style.css
+++ b/subodh/Task 02/style.css
@@ -160,7 +160,7 @@
 
 .content .c1 .d2{
     width: 100%;
-    /* padding: 0 20%; */
+    padding: 0 40px;
     /* height: 500px; */
     margin-top: 20px;
     gap: 50px;
